--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,9 @@ main {
 header,
 footer,
 main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center*/
 }
 
@@ -137,7 +140,7 @@ main {
   color: #fff;
   line-height: 1.5em;
   font-size: 1.25em;
-  height: auto;
+  height: 300px;
 }
 
 .wrapper span {
@@ -146,17 +149,25 @@ main {
 }
 
 .flex-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    justify-content: space-between;
   /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center, and set flex-flow to row wrap*/
 }
 
 .flex-items {
-  /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center*/
-  color: #fff;
-  line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  width: 30%;
-  height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center*/
+    color: #fff;
+    line-height: 1.5em;
+    font-size: 1.6em;
+    background-color: #f16059;
+    width: 30%;
+    height: 200px;
 }
 
 /* ==========================================================================
